--- a/examples/android/app/src/main/res/layout/activity_camera.xml
+++ b/examples/android/app/src/main/res/layout/activity_camera.xml
@@ -61,6 +61,14 @@
         android:text="End Operator" />
 
     <Button
+        android:id="@+id/tv_turn_on_off_dnn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="175dp"
+        android:layout_marginLeft="25dp"
+        android:text="DNN Running..." />
+
+    <Button
         android:id="@+id/tv_start_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
