--- a/examples/android/app/src/main/res/layout/activity_camera.xml
+++ b/examples/android/app/src/main/res/layout/activity_camera.xml
@@ -69,6 +69,14 @@
         android:text="DNN Running..." />
 
     <Button
+        android:id="@+id/tv_turn_on_off_camera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="225dp"
+        android:layout_marginLeft="25dp"
+        android:text="Camera is ON" />
+
+    <Button
         android:id="@+id/tv_start_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
